--- a/src/gammon/components/boards/board.appearance.css
+++ b/src/gammon/components/boards/board.appearance.css
@@ -3,7 +3,8 @@
     margin: 5px;
     border-color: var(--boardColor);
     border-style: solid;
-    border-width: calc(var(--pieceSize) * 0.5 + 3px) calc(var(--pieceSize) * 0.5);
+    border-width: calc(var(--pieceSize) * 0.5 + 3px)
+        calc(var(--pieceSize) * 0.5);
     background-color: var(--boardBackgroundColor);
 }
 
@@ -15,9 +16,9 @@
 }
 
 /* 中央・左右のバー */
-.bar, .side-bar {
+.bar,
+.side-bar {
     background-color: var(--boardColor);
-
 }
 
 /* ベアオフの駒の置き場 */
