--- a/src/gammon/components/uiparts/button.css
+++ b/src/gammon/components/uiparts/button.css
@@ -1,7 +1,6 @@
-
 .button {
     border-radius: 5px;
     display: flex;
     align-items: center;
-    padding: 15px 30px
+    padding: 15px 30px;
 }
