--- a/src/gammon/components/uiparts/cubeResponseDialog.css
+++ b/src/gammon/components/uiparts/cubeResponseDialog.css
@@ -1,21 +1,19 @@
-
 .dialog > .cubeResponse {
     width: 100%;
-    height:75%;
-    display:flex;
+    height: 75%;
+    display: flex;
     flex-direction: column;
     justify-content: space-around;
 }
 
-
 .dialog > .cubeResponse .csscaption {
     width: 100%;
-    display:flex;
+    display: flex;
     justify-content: center;
 }
 
 .dialog > .cubeResponse .csscaption:before {
-    content: "Take or Pass?";
+    content: 'Take or Pass?';
     align-self: center;
 }
 
@@ -36,10 +34,9 @@
 }
 
 .button.take:after {
-    content: "Take";
+    content: 'Take';
 }
 
 .button.pass:after {
-    content: "Pass";
+    content: 'Pass';
 }
-
