--- a/src/gammon/components/uiparts/dialog.css
+++ b/src/gammon/components/uiparts/dialog.css
@@ -1,6 +1,6 @@
 .boardContainer {
     width: fit-content;
-    position: relative
+    position: relative;
 }
 
 .dialogContainer {
@@ -21,7 +21,7 @@
     background: white;
 
     width: 75%;
-    height: calc(var(--pieceSize) * 4.0);
+    height: calc(var(--pieceSize) * 4);
     padding: 0 0;
     margin: 0 0;
     border: 1px solid black;
@@ -33,10 +33,9 @@
 }
 
 .dialog .caption {
-    height: calc(var(--pieceSize) * 1.0);
+    height: calc(var(--pieceSize) * 1);
     display: flex;
     flex-flow: column;
     justify-content: center;
     align-items: center;
 }
-
