Dialogの表示をBoardで管理するように変更

--- a/src/gammon/components/boards/board.css
+++ b/src/gammon/components/boards/board.css
@@ -9,6 +9,13 @@
     --whitePieceColor: var(--whiteSideColor);
 }
 
+.boardContainer {
+    width: fit-content;
+    position: relative;
+    display:flex;
+    align-items: center;
+}
+
 .board {
     width: fit-content;
 
