Buttonの定義を分離

--- a/src/gammon/components/uiparts/button.css
+++ b/src/gammon/components/uiparts/button.css
@@ -4,3 +4,10 @@
     align-items: center;
     padding: 15px 30px;
 }
+
+.buttons {
+    width: 100%;
+    display: flex;
+    justify-content: space-around;
+    align-items: center;
+}
