キューブの表示を調整

--- a/src/gammon/components/boards/board.appearance.css
+++ b/src/gammon/components/boards/board.appearance.css
@@ -52,5 +52,6 @@
 
     --cubeColor: black;
     --cubeFontColor: white;
-    --cubeMaxColor: gray;
+    --cubeMaxColor: darkgray;
+    --cubeBorderColor: black;
 }
