--- a/src/gammon/components/uiparts/dialog.css
+++ b/src/gammon/components/uiparts/dialog.css
@@ -21,7 +21,7 @@
 
     display: flex;
     flex-flow: column;
-    justify-content: center;
+    justify-content: space-evenly;
     align-items: center;
 }
 
