--- a/src/gammon/components/apps/bgMain.css
+++ b/src/gammon/components/apps/bgMain.css
@@ -45,3 +45,13 @@
     color:white;
     background: darkslategray;
 }
+
+#reset_posID{
+    width:fit-content;
+    display:inline;
+    border:black;
+    border-style: solid;
+    border-width: 1px;
+    padding: 1px 10px;
+    margin: 5px 10px;
+}
