等幅フォントの指定を追加

--- a/src/gammon/components/recordedGames/recordedGame.css
+++ b/src/gammon/components/recordedGames/recordedGame.css
@@ -10,11 +10,11 @@
 }
 
 /* マッチログ */
-#matchRecord {
+#matchRecord > pre {
     margin: 5px;
     border: gray solid 1px;
 
-    font-family: monospace;
+    font-family: 'Lucida Console', 'Consolas', 'Courier New', monospace;
     overflow-y: auto;
     height: 200px;
 }
