ボタンの幅をブラウザに委ねた

--- a/src/gammon/components/apps/bgMain.css
+++ b/src/gammon/components/apps/bgMain.css
@@ -21,7 +21,7 @@
 #term {
     background: darkred;
     color: white;
-    width: 15%;
+    width: fit-content;
     justify-content: center;
     margin-top: 25px;
     padding: 5px 10px;
